--- a/little-lemon/src/components/navbar/navbar.css
+++ b/little-lemon/src/components/navbar/navbar.css
@@ -1,8 +1,3 @@
-body {
-    width: 100%;
-    margin: 0 auto;
-}
-
 li {
     list-style: none;
 }
@@ -13,11 +8,12 @@ a {
 
 nav {
     z-index: 10001;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
-
 .navbar {
-    padding: 10px 13%;
+    padding: 10px 16%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,7 +25,9 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #000;
+    font-size: 24px;
+    font-weight: 500;
+    color: #333333;
 }
 
 nav ul li a:hover {
@@ -51,7 +49,7 @@ nav ul li a:hover {
 .nav-links.visible {
     flex-direction: column;
     position: absolute;
-    top: 40px;
+    top: 10%;
     right: 0;
     width: 100%;
     background-color: #495E57;
@@ -60,7 +58,7 @@ nav ul li a:hover {
     transition: all 0.3s ease-in-out;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 900px) {
     .menu-icon {
         display: block;
         align-items: center;
