--- a/little-lemon/src/components/highlights/highlights.css
+++ b/little-lemon/src/components/highlights/highlights.css
@@ -63,6 +63,7 @@
     margin-top: 16px;
     font-size: 20px;
     font-weight: 600;
+    background-color: #EDEFEE;
 }
 
 @media (max-width: 900px) {
