--- a/little-lemon/src/components/navbar/navbar.css
+++ b/little-lemon/src/components/navbar/navbar.css
@@ -1,11 +1,3 @@
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
 nav {
     z-index: 10001;
     margin-top: 2vh;
@@ -31,7 +23,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    text-decoration: underline solid #495E57;
+    text-decoration: underline solid #333333;
 
 }
 
