--- a/little-lemon/src/App.css
+++ b/little-lemon/src/App.css
@@ -3,6 +3,7 @@
 @import url('./components/navbar/navbar.css');
 @import url('./components/widgets/button.css');
 @import url('./components/home/testimonials/testimonials.css');
+@import url('./components/home/about/about.css');
 @import url('./components/footer/footer.css');
 
 @font-face {
