--- a/little-lemon/src/components/navbar/navbar.css
+++ b/little-lemon/src/components/navbar/navbar.css
@@ -16,13 +16,13 @@ nav ul li {
     padding: 1em;
 }
 
-nav ul li a {
+nav ul li .link {
     font-size: 24px;
     font-weight: 500;
     color: #333333;
 }
 
-nav ul li a:hover {
+nav ul li .link:hover {
     text-decoration: underline solid #333333;
 
 }
@@ -75,7 +75,7 @@ nav ul li a:hover {
         padding: 10px 8%;
     }
 
-    nav ul li a {
+    nav ul li .link {
         color: #fff;
     }
 }
